tests/ui/empty-ensure.stderr
error: unexpected end of macro invocation
 --> tests/ui/empty-ensure.rs:4:5
  |
4 |     ensure!();
  |     ^^^^^^^^^ missing tokens in macro arguments
